force-app/main/default/objects/Apttus_QPConfig__ProposalIncentiveLimitData__c/Apttus_QPConfig__ProposalIncentiveLimitData__c.object-meta.xml
<CustomObject>
    <description>Represents a single limit data row associated with the incentive limit for the quote/proposal</description>
    <label>Proposal Incentive Limit Data</label>
    <nameField>
        <displayFormat>PLD-{00000000}</displayFormat>
        <label>Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Incentive Limit Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>