force-app/main/default/objects/Apttus_QPConfig__ProposalIncentiveLimitData__c/fields/Apttus_QPConfig__IncentiveId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__IncentiveId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated incentive</description>
    <inlineHelpText>ID of the associated incentive</inlineHelpText>
    <label>Incentive</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Proposal Incentive Limit Data</relationshipLabel>
    <relationshipName>ProposalIncentiveLimitData</relationshipName>
    <type>Lookup</type>
</CustomField>