force-app/main/default/objects/Apttus_QPConfig__ProposalIncentiveLimitData__c/fields/Apttus_QPConfig__LimitAppliesToValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__LimitAppliesToValue__c</fullName>
    <description>Indicates the scope the limit should be applied to</description>
    <externalId>true</externalId>
    <inlineHelpText>Indicates the scope the limit should be applied to</inlineHelpText>
    <label>Limit Applies To Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>