force-app/main/default/objects/Apttus_QPConfig__ProposalIncentiveLimitData__c/fields/Apttus_QPConfig__LimitStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__LimitStartDate__c</fullName>
    <description>The start date of the limit period</description>
    <inlineHelpText>The start date of the limit period</inlineHelpText>
    <label>Limit Start Date</label>
    <type>Date</type>
</CustomField>